--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -305,6 +305,9 @@ header .titulo a {
   transition: 1s ease;
   box-shadow: 0px 0px 147px 23px rgb(65, 64, 64);
 }
+.slider .slide .detalles a, .slider .slide-grande .detalles a {
+  text-decoration: none;
+}
 .slider .slide .detalles:hover, .slider .slide-grande .detalles:hover {
   z-index: 100;
   width: 90%;
@@ -552,7 +555,7 @@ header .titulo a {
     min-width: 20%;
   }
   .slider .slide-grande .image-container {
-    width: 170px;
+    width: 180px;
   }
 }
 @media (min-width: 1200px) {
@@ -697,6 +700,9 @@ p {
   transition: 1s ease;
   box-shadow: 0px 0px 147px 23px rgb(65, 64, 64);
 }
+.detalles a {
+  text-decoration: none;
+}
 
 .detalles:hover {
   z-index: 100;
@@ -747,6 +753,7 @@ p {
 
 .naranja {
   border-radius: 6px;
+  height: 30px;
   text-align: center;
   padding: 1%;
 }
