--- a/FilmCity/estilos/parciales/_home.scss
+++ b/FilmCity/estilos/parciales/_home.scss
@@ -165,6 +165,10 @@
     left: 7.6%;
     transition: 1s ease;
     box-shadow: 0px 0px 147px 23px rgb(65, 64, 64);
+
+    a{
+      text-decoration: none;
+    }
   }
 
   .detalles:hover {
@@ -185,6 +189,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
+
+  
 
   .peliculas_derecha{
       text-align: end;
@@ -511,7 +517,7 @@
       min-width: calc(100% / 5); // 5 imágenes (20% del ancho)
 
       .image-container {
-        width: 170px; // Ajusta el tamaño de la imagen
+        width: 180px; // Ajusta el tamaño de la imagen
       }
     }
   }
