--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -108,6 +108,10 @@ p {
     left: 7.6%;
     transition: 1s ease;
     box-shadow: 0px 0px 147px 23px rgb(65, 64, 64);
+
+    a{
+        text-decoration: none;
+      }
 }
 
 .detalles:hover {
@@ -163,6 +167,7 @@ p {
 .naranja{
     // background-color: orangered;
     border-radius: 6px;
+    height: 30px;
     text-align: center;
     padding: 1%;
 }
