--- a/FilmCity/estilos/parciales/_detallesSeries.scss
+++ b/FilmCity/estilos/parciales/_detallesSeries.scss
@@ -123,7 +123,7 @@ body{
         color: white;
         padding: 1%;
         text-align: center;
-            
+        border-radius: 10px;    
     }
 
 }
