--- a/FilmCity/estilos/parciales/_header.scss
+++ b/FilmCity/estilos/parciales/_header.scss
@@ -12,6 +12,7 @@ img {
 body {
     background-color: black !important;
     font-family: $fuente_principal !important;
+    overflow-x: hidden;
 }
 
 
