--- a/FilmCity/estilos/parciales/_reproductor.scss
+++ b/FilmCity/estilos/parciales/_reproductor.scss
@@ -1,140 +1,152 @@
 body{
-    border-color: black;
-  
+  border-color: black;
+
 }
 
 .contenedor { 
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    position: relative;
-    overflow: hidden;
-    .headerRepro{
-       position: absolute;
-       top: 0;
-       width: 100%;
-        background-color: #00000057;
-        height: 50px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        button {
-            background: none;
-            border: none;
-            color: inherit;
-            cursor: pointer;
-            font-size: inherit;
-            transition: color 0.5s ease, transform 0.3s ease;
-          }
-          button:focus {
-            outline: none;
-          }
-
-          button:hover{
-            background-color: $color_secundario;
-            color: #857171; /* Cambia de color al pasar el cursor (puedes modificarlo) */
-            transform: scale(1.1); /* Aumenta un poco el tamaño al hacer hover */
-          }
-
-        i{
-            font-size: 30px;
-            color: white;
-            margin-left: 20px;
-            margin-right: 20px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  position: relative;
+  overflow: hidden;
+  .headerRepro{
+     position: absolute;
+     top: 0;
+     width: 100%;
+      background-color: #00000057;
+      height: 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button {
+          background: none;
+          border: none;
+          color: inherit;
+          cursor: pointer;
+          font-size: inherit;
+          transition: color 0.5s ease, transform 0.3s ease;
         }
-    }
-
-    video{
-     display: block;
-     height: 100vh;
-     
-    }
-
-
-
-
-    .footerRepro{
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-         background-color: #00000057;
-        height: 50px;
-         display: flex;
-         justify-content: space-between;        
-         align-items: center;
-         gap: 20px;
-
-         button {
-            background: none;
-            border: none;
-            color: inherit;
-            cursor: pointer;
-            font-size: inherit;
-            transition: color 0.5s ease, transform 0.3s ease;
-          }
-          button:focus {
-            outline: none;
-          }
-
-          button:hover{
-            background-color: $color_secundario;
-            color: #857171; /* Cambia de color al pasar el cursor (puedes modificarlo) */
-            transform: scale(1.1); /* Aumenta un poco el tamaño al hacer hover */
-          }
-
-         .duracion{
-            -webkit-appearance: none;
-            height: 7px;
-            border-radius: 5px;
-            position: absolute;
-            bottom: 45px;
-            width: 90%;
-            left: 40px;
-            background:rgba(230, 0, 0, 0.637);
-
-        }
-        #duracionPelicula{
-            position: absolute;
-            font-size: 17px;
-            bottom: 55px;
-            left: 95%;
-            color: #b0aaaa;
+        button:focus {
+          outline: none;
         }
 
-         i{
-            font-size: 30px;
-            color: white;
-            margin-left: 20px;
-            margin-right: 20px;
-            
+        button:hover{
+          background-color: $color_secundario;
+          color: #857171; /* Cambia de color al pasar el cursor (puedes modificarlo) */
+          transform: scale(1.1); /* Aumenta un poco el tamaño al hacer hover */
         }
 
-        .volumen{
-            position: absolute;
-            left: 220px;
-            width: 300px;
-            
-            button{
-                margin-right: -25px;
-                transition: color 0.0s ease, transform 0.0s ease;
-            }
-            button:hover{
-                background-color: #00000000;
-                transform: scale(1); /* Aumenta un poco el tamaño al hacer hover */
-            }
-            input{
-                -webkit-appearance: none;
-                height: 7px;
-                border-radius: 5px;
-                background:rgba(230, 0, 0, 0.637);
-                margin-right: -15px;
-                width: 200px;
-                margin-bottom: 7px;
-            }
-        }
-        .informacion{
-            color: white;
-            font-weight: bold;
-        }
-    }
+      i{
+          font-size: 30px;
+          color: white;
+          margin-left: 20px;
+          margin-right: 20px;
+      }
   }
+
+  video{
+   display: block;
+   height: 100vh;
+   
+  }
+
+
+
+
+  .footerRepro{
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+       background-color: #00000057;
+      height: 50px;
+       display: flex;
+       justify-content: space-between;        
+       align-items: center;
+       gap: 20px;
+
+       button {
+          background: none;
+          border: none;
+          color: inherit;
+          cursor: pointer;
+          font-size: inherit;
+          transition: color 0.5s ease, transform 0.3s ease;
+        }
+        button:focus {
+          outline: none;
+        }
+
+        button:hover{
+          background-color: $color_secundario;
+          color: #857171; /* Cambia de color al pasar el cursor (puedes modificarlo) */
+          transform: scale(1.1); /* Aumenta un poco el tamaño al hacer hover */
+        }
+
+       .duracion{
+          -webkit-appearance: none;
+          height: 7px;
+          border-radius: 5px;
+          position: absolute;
+          bottom: 45px;
+          width: 90%;
+          left: 40px;
+          background:rgba(230, 0, 0, 0.637);
+
+      }
+      #duracionPelicula{
+          position: absolute;
+          font-size: 17px;
+          bottom: 45px;
+          left: 95%;
+          color: #b0aaaa;
+      }
+
+       i{
+          font-size: 30px;
+          color: white;
+          margin-left: 20px;
+          margin-right: 20px;
+          
+      }
+
+      .volumen{
+          position: absolute;
+          left: 220px;
+          width: 300px;
+          transform: rotate(-90deg); /* Rota la barra 90 grados */
+          transform-origin: left top; /* Ajusta el punto de origen de la rotación */
+          bottom: -45px;
+          border-radius: 20px;
+          button{
+              margin-right: -25px;
+              transition: color 0.0s ease, transform 0.0s ease;
+              transform: rotate(90deg); /* Rota la barra 90 grados */
+          }
+          button:hover{
+              background-color: #00000000;
+          }
+          input{
+              -webkit-appearance: none;
+              height: 7px;
+              border-radius: 5px;
+              background:rgba(230, 0, 0, 0.637);
+              margin-right: -15px;
+              width: 200px;
+              margin-bottom: 7px;
+              margin-left: 4px;
+              
+              
+          }
+      }
+
+      .volumen:hover{
+        background-color: #5f5f5f79;
+
+      }
+      .informacion{
+          color: white;
+          font-weight: bold;
+      }
+  }
+}
+
