--- a/FilmCity/estilos/parciales/_detallesPeliculas.scss
+++ b/FilmCity/estilos/parciales/_detallesPeliculas.scss
@@ -17,6 +17,7 @@
             transform: translate(-50%, -50%);
             z-index: -1;
             object-fit: cover; /* Ajusta el video sin deformación */
+            filter: grayscale(20%) contrast(150%) brightness(30%);
         }
     }
 
