--- a/FilmCity/estilos/parciales/_header.scss
+++ b/FilmCity/estilos/parciales/_header.scss
@@ -15,8 +15,6 @@ body {
     overflow-x: hidden;
 }
 
-
-
 header {
     background-color: $color_secundario;
     width: 100%;
@@ -30,15 +28,14 @@ header {
     position: sticky;
     top: 0;
     z-index: 1000;
-
-    
     
     .desplegable {
         display: block;
         font-size: 35px;
         color: white;
         margin-left: -100px;
-        margin-top:13px;
+        margin-top: 13px;
+        cursor: pointer;
     }
 
     .perfil {
@@ -66,18 +63,34 @@ header {
 
     .secciones {
         display: none;
-
-        a{
+        flex-direction: column;
+        background-color: rgba(10, 10, 10, 0.7);
+        position: absolute;
+        top: 60px;
+        left: 110px;
+        width: 40%;
+        padding: 10px;
+        text-align: center;
+        border-radius: 10px;
+        
+        a {
+            display: block;
             text-decoration: none;
             color: $color_principal;
             font-weight: 250;
+            padding: 10px;
             transition: transform 0.3s ease, opacity 0.3s ease;
+            
             &:hover {
-                transform: scale(1.1); // Aumenta el tamaño ligeramente
-                opacity: 0.8; // Reduce un poco la opacidad
+                transform: scale(1.1);
+                opacity: 0.8;
             }
         }
-       
+    }
+
+    /* Estilo cuando el menú está activo */
+    .secciones.active {
+        display: flex;
     }
 
     .titulo {
@@ -97,6 +110,11 @@ header {
 /* Tablets (>= 576px) */
 @media (min-width: 576px) {
     header {
+
+        .secciones{
+            width: 30%;
+            left: 150px;
+        }
         .perfil {
             gap: 20px;
             
@@ -114,7 +132,8 @@ header {
 /* Tablets y pantallas medianas (>= 768px) */
 @media (min-width: 768px) {
     header {
-        .desplegable{
+
+        .desplegable {
             margin-left: -230px;
         }
 
@@ -134,8 +153,6 @@ header {
                 font-size: 35px;
             }
         }
-
-
     }
 }
 
@@ -148,11 +165,17 @@ header {
             font-size: 16px;
             color: $color_principal;
             margin-top: 20px;
+            position: static;
+            flex-direction: row;
+            background-color: transparent;
+            width: auto;
+            padding: 0;
         }
 
-        .desplegable{
+        .desplegable {
             display: none;
         }
+
         .perfil {
             gap: 25px;
             
@@ -160,10 +183,10 @@ header {
                 width: 50px;
                 height: 50px;
             }
-            .menu{
+            .menu {
                 width: 20px;
             }
-            .lupa{
+            .lupa {
                 font-size: 20px;
             }
         }
@@ -191,7 +214,6 @@ header {
 /* Pantallas extra grandes (>= 1400px) */
 @media (min-width: 1400px) {
     header {
-
         .perfil {
             margin-right: 30px;
             gap: 25px;
